# codex-pluskints

./: README.md  pyproject.toml
src/codex_profile_manager/: cli.py  config.py  discovery.py  footprint.py  models.py  operations.py  profiles.py  tui.py
src/codex_profile_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
