[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-profile-manager"
version = "0.1.0"
description = "Manage Codex skill and plugin profiles for future sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich>=13.7.0",
  "textual>=0.82.0",
  "tomlkit>=0.12.5",
  "typer>=0.12.3",
]

[project.scripts]
codex-prof = "codex_profile_manager.cli:app"
pluskints = "codex_profile_manager.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
